<resources>
    <string name="app_name">Currency Converter</string>
    <string name="app_description">Check live rates, set rate alerts, receive notifications and more.</string>
    <string name="amount_label">Amount</string>
    <string name="converted_amount_label">Converted Amount</string>
    <string name="exchange_label">Indicative Exchange Rate</string>
    <string name="exchange_value">%.2f %s = %.2f %s</string>
    <string name="btn_clean">CLEAN</string>
    <string name="hint_input">Ex: 100.00</string>
    <string name="exchange_default_value">1 USD = 6,09 BRL</string>
    <string name="converted">100.00</string>
    <string name="converted_format">%.2f</string>
</resources>