<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:minLines="2"
        android:padding="10dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:elevation="8dp"
        android:background="@drawable/rounded_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle">

        <TextView
            android:id="@+id/tv_amount_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:labelFor="@id/currencies_spinner_input"
            android:text="@string/amount_label"
            android:textColor="@color/gray_inputs"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/box_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_amount_input"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_input">

            <Spinner
                android:id="@+id/currencies_spinner_input"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_inputs"
                android:gravity="center_vertical"
                tools:listitem="@layout/spinner_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_currency_value_layout_input"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:gravity="center_vertical"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_currency_value_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:hint="@string/hint_input"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="24dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/btn_swap"
            app:layout_constraintTop_toTopOf="@id/btn_swap"
            tools:layout_editor_absoluteX="24dp" />

        <ImageButton
            android:id="@+id/btn_swap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_swap"
            android:contentDescription="@null"
            android:elevation="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_swap_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_input" />

        <TextView
            android:id="@+id/tv_amount_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/converted_amount_label"
            android:textColor="@color/gray_inputs"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_amount_input"
            app:layout_constraintTop_toBottomOf="@id/btn_swap" />

        <LinearLayout
            android:id="@+id/box_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_amount_input"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_output"
            app:layout_constraintBottom_toBottomOf="parent">

            <Spinner
                android:id="@+id/currencies_spinner_output"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_inputs"
                android:gravity="center_vertical"
                tools:listitem="@layout/spinner_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_currency_value_layout_output"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:gravity="center_vertical"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_currency_value_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="numberDecimal"
                    android:enabled="false"
                    android:hint="@string/converted"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_exchange_result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_label"
        android:textColor="@color/gray_inputs"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_inputs"/>

    <TextView
        android:id="@+id/tv_exchange_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/exchange_default_value"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_exchange_result_label"
        app:layout_constraintTop_toBottomOf="@id/tv_exchange_result_label"/>

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_clean"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>